# quad-sdk

./: README.md
global_body_planner/: global_body_planner.yaml
local_planner/: local_planner.yaml
local_planner/src/: local_footstep_planner.cpp  local_planner.cpp
nmpc_controller/: CMakeLists.txt
nmpc_controller/include/nmpc_controller/: quad_nlp.h
nmpc_controller/src/: nmpc_controller.cpp  quad_nlp_utils.cpp
quad_simulator/gazebo_scripts/: tf_to_pose_publisher.py
quad_simulator/gazebo_scripts/src/: contact_state_publisher.cpp
quad_simulator/spot_description/: CMakeLists.txt  package.xml
quad_simulator/spot_description/launch/: spot_rviz.launch  spot_rviz.rviz  spot_with_camera_rviz.launch
quad_simulator/spot_description/sdf/: spot.sdf  spot_with_camera.sdf  update_sdf.py
quad_simulator/spot_description/urdf/: spot.urdf  spot_with_camera.urdf
quad_utils/config/: spot.yaml
quad_utils/config/elevation_mapping/postprocessing/: postprocessor_pipeline.yaml
quad_utils/config/elevation_mapping/robots/: spot.yaml
quad_utils/launch/: load_global_params.launch  load_robot_params.launch  mapping.launch  quad_gazebo.launch  quad_plan.launch  quad_sim.launch  visualization_plugins.launch
quad_utils/rviz/: quad_viewer.rviz
quad_utils/scripts/: joystick_controller.py
quad_utils/src/: quad_kd.cpp  rviz_interface.cpp
