<?xml version="1.0"?>
<package format="2">
    <name>spot_description</name>
    <version>0.0.1</version>
    <description>The spot_description package</description>

    <maintainer email="lnotspotl@gmail.com">lnotspotl</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

</package>
